<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddListActivity">

    <FrameLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/everyday_blue"
        >

        <ImageButton
            android:id="@+id/btn_new_list_exit"
            android:contentDescription="@string/cancel_create_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:layout_marginVertical="100dp"
           android:layout_marginHorizontal="40dp"
           android:orientation="vertical"
           android:elevation="20dp">

           <EditText
               android:id="@+id/input_newList"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/input_new_list_desc"
               android:layout_margin="10dp"
               android:importantForAutofill="no"
               android:inputType="text" />

           <Button
               android:id="@+id/btn_add_new_list"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:foregroundGravity="center_horizontal|bottom"
               android:layout_marginStart="250dp"
               android:text="@string/btn_create"
               android:backgroundTint="@color/white"
               android:textColor="@color/everyday_blue"
               android:stateListAnimator="@null" />

       </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>