<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/item_background_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/chkd_item"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"

            android:scaleX="1.5"
            android:scaleY="1.5" />

        <RelativeLayout
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">


            <TextView
                android:id="@+id/lbl_item_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_vertical|start"
                android:text="@string/lbl_item_name_default"
                android:textAppearance="@style/item_name" />

            <EditText
                android:id="@+id/input_item_name"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:autofillHints=""

                android:background="@null"
                android:hint="@string/input_item_name_str"

                android:inputType="text"
                android:textAppearance="@style/item_name"
                android:visibility="invisible" />


        </RelativeLayout>


        <ImageButton
            android:id="@+id/btn_item_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginHorizontal="2dp"

            android:background="@drawable/shape_round_btn"
            android:src="@drawable/ic_btn_lower"

            app:tint="@color/white"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/lbl_item_amount"
                style="@style/list_title"
                android:layout_width="40dp"

                android:layout_height="match_parent"


                android:gravity="center"

                android:text="@string/lbl_item_amount_default"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_item_confirm_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"

                android:src="@drawable/ic_btn_check"
                android:visibility="invisible"
                app:tint="@color/everyday_green"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_item_higher"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginHorizontal="2dp"

            android:background="@drawable/shape_round_btn"
            android:contentDescription="@string/todo"

            android:src="@drawable/ic_btn_highup"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>